1. change as per gemini suggestion 2. added option to edit and display available seats in both utsav and adhyayan

--- a/admin/adhyayan/adhyayanReport.html
+++ b/admin/adhyayan/adhyayanReport.html
@@ -107,7 +107,8 @@ width: 100%;
                     <th>Swadhyay Karta</th>
                     <th>Confirmed Count</th>
                     <th>Pending Count</th>
-                    <th>Max Count</th>
+                    <th>Max Seats Count</th>
+                    <th>Available Seats Count</th>
                     <th>WaitList Count</th>
                     <th>Self Cancelled Count</th>
                     <th>Admin/Cron Cancelled Count</th>
