--- a/admin/utsav/fetchAllUtsav.html
+++ b/admin/utsav/fetchAllUtsav.html
@@ -57,6 +57,7 @@
                       <th><center>End Date</center></th>
                       <th><center>Registration Deadline</center></th>
                       <th><center>Max Count</center></th>
+                      <th><center>Avaibale Count</center></th>
                       <th><center>Location</center></th>
                       <th><center>Status</center></th>
                       <th><center>Action</center></th>
