--- a/admin/adhyayan/fetchAllAdhyayan.html
+++ b/admin/adhyayan/fetchAllAdhyayan.html
@@ -59,6 +59,7 @@
                       <th><center>End Date</center></th>
                       <th><center>Food Allowed</center></th>
                       <th><center>Max Count</center></th>
+                      <th><center>Available Count</center></th>
                       <th><center>Change Status To</center></th>
                       <th><center>Action</center></th>
                     </tr>
