--- a/admin/adhyayan/updateAdhyayan.html
+++ b/admin/adhyayan/updateAdhyayan.html
@@ -83,6 +83,11 @@
                 </div>
 
                 <div class="form-group">
+                  <label for="available_seats">Available Seats:</label>
+                  <input type="number" id="available_seats" name="available_seats" class="form-control" required />
+                </div>
+
+                <div class="form-group">
                   <label for="food_allowed">Food Allowed:</label>
                   <select id="food_allowed" name="food_allowed" class="form-control" required>
   <option value="1">Yes</option>
