--- a/admin/utsav/updateUtsav.html
+++ b/admin/utsav/updateUtsav.html
@@ -69,6 +69,11 @@
                 </div>
 
                 <div class="form-group">
+                  <label for="available_seats">Avaibale Seats:</label>
+                  <input type="number" id="available_seats" name="available_seats" class="form-control" required />
+                </div>
+
+                <div class="form-group">
                   <label for="comments">Comments:</label>
                   <textarea id="comments" name="comments" rows="4" class="form-control"></textarea>
                 </div>
