--- a/admin/utsav/utsavReport.html
+++ b/admin/utsav/utsavReport.html
@@ -72,7 +72,8 @@ width: 100%;
                     <th>Confirmed Count</th>
                     <th>Checkedin Count</th>
                     <th>Pending Count</th>
-                    <th>Max Count</th>
+                    <th>Max Seats Count</th>
+                    <th>Available Seats Count</th>
                     <th>WaitList Count</th>
                     <th>Self_Cancelled Count</th>
                     <th>Admin/Cron Cancelled Count</th>
