1. added booking id in room report 2. added checkout date in late fee description 3. added default date filter in room report

--- a/admin/room/roomReports.html
+++ b/admin/room/roomReports.html
@@ -127,6 +127,7 @@
               <thead>
                 <tr>
                   <th></th>
+                  <th>Booking Id</th>
                   <th>Guest Name</th>
                   <th>Mobile No.</th>
                   <th>Center</th>
