late checkout fees report - work in progress

--- a/admin/room/index.html
+++ b/admin/room/index.html
@@ -55,6 +55,7 @@
                 <a class="menu-btn" href="manageRooms.html">Manage Rooms</a>
                 <a class="menu-btn" href="blockRC.html">Block / Unblock RC</a>
                 <a class="menu-btn" href="roomReports.html">Room Booking Reports</a>
+                <a class="menu-btn" href="lateCheckOutFeeReport.html">Late Checkout Fees Report</a>
                 <a class="menu-btn" href="occupancyReport.html">Occupancy Report</a>
                 <a class="menu-btn" href="dailyGuestCountReport.html">Daily Guest Count / Availability Report</a>
               </div>
