--- a/admin/adminhome.html
+++ b/admin/adminhome.html
@@ -164,7 +164,7 @@
         ],
         utsavAdmin: [{ href: 'utsav/index.html', text: 'Utsav Management' }],
         avtAdmin: [{ href: 'avt/index.html', text: 'AVT Management' }],
-        utsavAdminReadOnly: [{ href: 'utsav/utsavReport.html', text: 'Utsav Report' }],
+        utsavAdminReadOnly: [{ href: 'utsav/utsavCentre.html', text: 'Utsav Report' }],
         wifiAdmin: [{ href: 'wifi/index.html', text: 'WiFi Management' }],
         smilesAdmin: [{ href: 'food/manageBulkFood.html', text: 'Bulk Food Booking' }]
       };
