--- a/admin/utsav/utsavCentre.html
+++ b/admin/utsav/utsavCentre.html
@@ -1,6 +1,6 @@
 <script src="/style/js/roleCheck.js"></script>
 <script>
-  checkRoleAccess(['officeAdmin', 'utsavAdmin', 'superAdmin']); // customize allowed roles per page
+  checkRoleAccess(['officeAdmin', 'utsavAdmin', 'superAdmin', 'utsavAdminReadOnly']); // customize allowed roles per page
 </script>
 
 <!DOCTYPE html>
