--- a/admin/travel/fetchUpcomingBookings.html
+++ b/admin/travel/fetchUpcomingBookings.html
@@ -63,7 +63,7 @@
                     <label><input type="checkbox" name="status" value="confirmed" /> Confirmed </label>
                     <label><input type="checkbox" name="status" value="proceed for payment" /> Proceed for Payment</label>
                     <label><input type="checkbox" name="status" value="awaiting confirmation" /> Awaiting Confirmation for Payment</label>
-                    <label><input type="checkbox" name="status" value="waiting" /> Awaiting Confirmation for Payment (datachef)</label>
+                    <label><input type="checkbox" name="status" value="waiting" /> Waiting</label>
                     <label><input type="checkbox" name="status" value="cancelled" /> Self-Cancel </label>
                     <label><input type="checkbox" name="status" value="wrong form cancel" /> Cancelled as wrong form filled</label>
                     <label><input type="checkbox" name="status" value="admin cancelled" /> Admin Cancelled</label>
