added pre and post room occupancy report for events

--- a/admin/utsav/utsavReport.html
+++ b/admin/utsav/utsavReport.html
@@ -82,6 +82,7 @@ width: 100%;
                     <th>Action</th>
                     <th>Scanner</th> 
                     <th>Register for Mumukshu</th>
+                    <th>Room Occupancy</th>
                   </tr>
                 </thead>
                 <tbody id="utsavTable">
