--- a/admin/food/issuePlate.html
+++ b/admin/food/issuePlate.html
@@ -38,6 +38,12 @@
       .alert-danger {
         color: red;
       }
+      .alert-warning {
+  /* background-color: #fff3cd; */
+  color: #856404;
+  /* border: 2px solid #ffeeba; */
+}
+
     </style>
   </head>
 
