--- a/admin/utsav/utsavReport.html
+++ b/admin/utsav/utsavReport.html
@@ -80,7 +80,8 @@ width: 100%;
                     <th>Volunteer List</th>
                     <th>Status</th>
                     <th>Action</th>
-                    <th>Scanner</th> 
+                    <th>Checkin Scanner</th> 
+                    <th>Food Scanner</th> 
                     <th>Register for Mumukshu</th>
                     <th>Room Occupancy</th>
                   </tr>
