--- a/admin/travel/fetchUpcomingBookings.html
+++ b/admin/travel/fetchUpcomingBookings.html
@@ -261,6 +261,7 @@
   width:100%; height:100%;
   background:rgba(0,0,0,0.6);
   z-index:9999;
+  overflow: auto;
 ">
   <div class="modal-content" style="
     background:white;
