wifi changes 1. bulk new insert 2. modified bulk approval function 3. updated action modal - how status changes

--- a/admin/wifi/index.html
+++ b/admin/wifi/index.html
@@ -48,8 +48,8 @@
 
             <div class="admin-menu">
               <div class="menu-grid">
-                <a class="menu-btn" href="uploadCodes.html">Upload New Codes</a>
-                <a class="menu-btn" href="wifiReport.html">Wifi Codes Usage Report</a>
+                <a class="menu-btn" href="uploadCodes.html">Upload New Temporary Codes</a>
+                <a class="menu-btn" href="wifiReport.html">Temporary Wifi Codes Usage` Report</a>
                 <a class="menu-btn" href="permanentCodeRequests.html">Permanent Code Requests</a>
                 </div>
             </div>
