attendance scanner added

--- a/admin/adhyayan/adhyayanReport.html
+++ b/admin/adhyayan/adhyayanReport.html
@@ -112,6 +112,7 @@ width: 100%;
                     <th>WaitList Count</th>
                     <th>Self Cancelled Count</th>
                     <th>Admin/Cron Cancelled Count</th>
+                    <th>Attendance Scanner Link</th>
                     <th>Adhyayan Link</th>
                     <th>Feedback Form Link</th>
                     <th>Feedbacks Received</th>
