--- a/admin/adhyayan/adhyayanReport.html
+++ b/admin/adhyayan/adhyayanReport.html
@@ -56,6 +56,52 @@ width: 100%;
   cursor: pointer;
 }
 
+/* Override global table min-width ONLY for attendance summary */
+#attendanceSummaryModal .table {
+  min-width: unset !important;
+  width: auto !important;
+}
+
+.attendance-modal {
+  max-width: 650px;
+  margin: 6% auto;
+  padding: 20px 24px;
+}
+.attendance-link {
+  color: blue;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.attendance-link:hover {
+  color: #1f3b5b;
+}
+
+
+#attendanceSummaryTable {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+#attendanceSummaryTable th,
+#attendanceSummaryTable td {
+  padding: 10px 12px;
+  text-align: center;
+  vertical-align: middle;
+}
+
+#attendanceSummaryTable th {
+  background-color: #1f3b5b;
+  color: #fff;
+  position: sticky;
+  top: 0;
+  z-index: 2;
+}
+
+#attendanceSummaryTable tr:nth-child(even) {
+  background-color: #f5f7fa;
+}
+
   </style>
   <!-- Styles -->
   <link rel="stylesheet" href="../../style/css/styles.css" />
@@ -113,6 +159,8 @@ width: 100%;
                     <th>Self Cancelled Count</th>
                     <th>Admin/Cron Cancelled Count</th>
                     <th>Attendance Scanner Link</th>
+                    <th>Attendance Detailed Report</th>
+                    <th>Attendance Summary Report</th>
                     <th>Adhyayan Link</th>
                     <th>Feedback Form Link</th>
                     <th>Feedbacks Received</th>
@@ -139,6 +187,29 @@ width: 100%;
     <span class="close-modal">&times;</span>
     <h2 id="feedbackModalHeading">Feedback Summary</h2> <!-- dynamic heading -->
     <div id="feedbackStats"></div>
+  </div>
+</div>
+
+<div id="attendanceSummaryModal" class="modal">
+  <div class="modal-content attendance-modal">
+    <span class="close-modal">&times;</span>
+
+    <h2 id="attendanceSummaryHeading"></h2>
+
+    
+    <table id="attendanceSummaryTable"
+      class="table table-striped table-bordered">
+      <thead>
+        <tr>
+          <th>Session</th>
+          <th>Total Registrants</th>
+          <th>Total Attended</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+
+    <div id="attendanceSummaryDownload"></div>
   </div>
 </div>
 
