--- a/admin/adhyayan/adhyayanAttendanceReport.html
+++ b/admin/adhyayan/adhyayanAttendanceReport.html
@@ -15,9 +15,21 @@
 </head>
 
 <body>
-  <script>
+  <div class="header">
+    <div class="container">
+      <div class="logout">
+        <a href="javascript:void(0);" onclick="history.back()">Back</a>
+        &nbsp; | &nbsp;
+        <a href="javascript:void(0);" onclick="goToHome()">Home</a>
+        &nbsp; | &nbsp;
+        <a href="javascript:void(0);" onclick="logout()">Logout</a>
+      </div>
+    </div>
+  </div>
+<script>
     checkRoleAccess(['adhyayanAdmin', 'superAdmin']);
   </script>
+
 
   <div class="middlecontent">
     <div class="container">
