--- a/admin/adhyayan/adhyayanReport.html
+++ b/admin/adhyayan/adhyayanReport.html
@@ -15,94 +15,68 @@
 
   <!-- Shared Styles -->
   <link rel="stylesheet" href="../../style/css/styles.css" />
-  <style>
-    .table-responsive {
-width: 100%;
-overflow-x: auto;
--webkit-overflow-scrolling: touch;
-}
+<style>
+  .table-responsive {
+    width: 100%;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+  }
 
-.table {
-min-width: 1000px; /* Or adjust based on expected column count */
-width: 100%;
-}
-.modal {
-  display: none; 
-  position: fixed; 
-  z-index: 1000; 
-  left: 0;
-  top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: rgba(0,0,0,0.5); 
-}
+  .table {
+    min-width: 1000px;
+    width: 100%;
+  }
 
-.modal-content {
-  background-color: #fff;
-  margin: 10% auto; 
-  padding: 20px;
-  border-radius: 8px;
-  width: 400px;
-  position: relative;
-}
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    inset: 0;
+    background-color: rgba(0,0,0,0.5);
+  }
 
-.close-modal {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  color: #333;
-  font-size: 24px;
-  cursor: pointer;
-}
+  .modal-content {
+    background-color: #fff;
+    margin: 5% auto;
+    padding: 20px;
+    border-radius: 8px;
+    position: relative;
+  }
 
-/* Override global table min-width ONLY for attendance summary */
-#attendanceSummaryModal .table {
-  min-width: unset !important;
-  width: auto !important;
-}
+  .close-modal {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 24px;
+    cursor: pointer;
+  }
 
-.attendance-modal {
-  max-width: 650px;
-  margin: 6% auto;
-  padding: 20px 24px;
-}
-.attendance-link {
-  color: blue;
-  text-decoration: underline;
-  cursor: pointer;
-}
+  /* ===== Attendance Summary (simple) ===== */
 
-.attendance-link:hover {
-  color: #1f3b5b;
-}
+  #attendanceSummaryModal .modal-content {
+    width: 90%;
+    max-width: 900px;
+  }
 
+  #attendanceSummaryModal .table {
+    min-width: unset !important;
+    width: 100%;
+  }
 
-#attendanceSummaryTable {
-  width: 100%;
-  border-collapse: collapse;
-}
+  #attendanceSummaryTable th,
+  #attendanceSummaryTable td {
+    padding: 8px;
+    text-align: center;
+    white-space: nowrap;
+  }
 
-#attendanceSummaryTable th,
-#attendanceSummaryTable td {
-  padding: 10px 12px;
-  text-align: center;
-  vertical-align: middle;
-}
+  #attendanceSummaryTable th:first-child,
+  #attendanceSummaryTable td:first-child {
+    text-align: left;
+  }
 
-#attendanceSummaryTable th {
-  background-color: #1f3b5b;
-  color: #fff;
-  position: sticky;
-  top: 0;
-  z-index: 2;
-}
-
-#attendanceSummaryTable tr:nth-child(even) {
-  background-color: #f5f7fa;
-}
-
-  </style>
+  
+</style>
   <!-- Styles -->
   <link rel="stylesheet" href="../../style/css/styles.css" />
 
@@ -204,6 +178,7 @@ width: 100%;
           <th>Session</th>
           <th>Total Registrants</th>
           <th>Total Attended</th>
+          <th>Total Absentees</th>
         </tr>
       </thead>
       <tbody></tbody>
