--- a/admin/wifi/permanentCodeRequests.html
+++ b/admin/wifi/permanentCodeRequests.html
@@ -105,7 +105,7 @@
               <table id="wifiRequestTable" class="table table-striped table-bordered">
                 <thead>
   <tr>
-    <th data-key="sr">Sr</th>
+    <th data-key="sr">Id</th>
     <th data-key="cardno">Card No</th>
     <th data-key="issuedto">Issued To</th>
     <th data-key="mobno">Mobile</th>
@@ -138,21 +138,26 @@
     <h2>Update WiFi Request</h2>
     <input type="hidden" id="modalRequestId" />
 
+<div class="form-group">
+  <div style="display: flex; align-items: center; gap: 6px;">
+    <label style="margin: 0;">Current Status:</label>
+    <span id="modalCurrentStatus" style="font-weight: 600;"></span>
+  </div>
+</div>
+
     <div class="form-group">
-      <label for="modalAction">Action:</label>
-      <select id="modalAction" class="form-control">
-  <option value="pending">Pending</option>
-  <option value="approved">Approved</option>
+      <label for="modalNewStatus">New Status:</label>
+      <select id="modalNewStatus" class="form-control">
+  <option value="approved" selected>Approved</option>
   <option value="rejected">Rejected</option>
   <option value="deleted">Deleted</option>
-  <option value="reset">Reset</option>
 </select>
 
     </div>
 
     <div class="form-group">
       <label for="modalUsername">User Name:</label>
-      <input type="text" id="modalUsername" class="form-control" />
+      <input type="text" id="modalUsername" class="form-control" readonly/>
     </div>
 
     <div class="form-group">
