given permission to coordinators (readonly) to access attendance related pages

--- a/admin/adhyayan/adhyayanAttendanceReport.html
+++ b/admin/adhyayan/adhyayanAttendanceReport.html
@@ -27,7 +27,7 @@
     </div>
   </div>
 <script>
-    checkRoleAccess(['adhyayanAdmin', 'superAdmin']);
+    checkRoleAccess(['adhyayanAdmin', 'superAdmin','adhyayanAdminKol', 'adhyayanAdminRaj', 'adhyayanAdminDhu', 'adhyayanAdminReadOnly']);
   </script>
 
 
