1. added admin comments in adhyayan and utsav report 2. added utsav id in settlement breakdown report so that vikash uncle can differentiate this 7k is for AM, this 7k is for PM

--- a/admin/adhyayan/adhyayanBookingslist.html
+++ b/admin/adhyayan/adhyayanBookingslist.html
@@ -67,6 +67,7 @@
       <th>Res Status</th>
       <th>Booking Status</th>
       <th>Transaction Status</th>
+      <th>Admin Comments</th>
       <th>Booked By</th>
       <th>Action</th>
     </tr>
