gave admin option to register mumukshu for adhyayan

--- a/admin/adhyayan/adhyayanReport.html
+++ b/admin/adhyayan/adhyayanReport.html
@@ -139,6 +139,7 @@
                     <th>Feedback Form Link</th>
                     <th>Feedbacks Received</th>
                     <th>Feedback Summary</th>
+                    <th>Register for Mumukshu</th>
                     <th>Status</th>
                     <th>Action</th>
                   </tr>
