--- a/admin/travel/fetchUpcomingBookings.html
+++ b/admin/travel/fetchUpcomingBookings.html
@@ -276,7 +276,7 @@
       style="position:absolute;top:10px;right:15px;font-size:24px;cursor:pointer;">&times;</span>
 
     <h3>Edit Transaction</h3>
-
+    
     <form id="transactionForm">
       <div class="form-group">
         <label>Booking ID</label>
@@ -286,6 +286,11 @@
       <div class="form-group">
         <label>Mumukshu Name</label>
         <input id="txnIssuedTo" class="form-control" readonly>
+      </div>
+
+      <div class="form-group">
+        <label>Travel Date</label>
+        <input type="date" id="txnTravelDate" class="form-control"/>
       </div>
 
       <div class="form-group">
