--- a/admin/food/manageFood.html
+++ b/admin/food/manageFood.html
@@ -64,6 +64,11 @@
                 </div>
 
                 <div class="form-group">
+                  <label for="name">Name:</label>
+                  <input type="text" id="name" name="name" class="form-control" disabled /> 
+                </div>
+
+                <div class="form-group">
                   <label for="start_date">Start Date:</label>
                   <input type="date" id="start_date" name="start_date" class="form-control" required />
                 </div>
