simplified food report - removed extra page

--- a/admin/food/index.html
+++ b/admin/food/index.html
@@ -52,7 +52,7 @@
                 <a class="menu-btn" href="manageFood.html">Manage Food Bookings</a>
                 <a class="menu-btn" href="manageBulkFood.html">Manage Guest Food Bookings</a>
                 <a class="menu-btn" href="plateCount.html">Plates Issued</a>
-                <a class="menu-btn" href="foodReports.html">Food Reports</a>
+                <a class="menu-btn" href="foodReport.html">Food Reports</a>
                 <a class="menu-btn" href="fetchMenu.html">Menu Management</a>
                 <a class="menu-btn" href="issuePlateScan.html">Issue Plate - Scanner</a>
                 
