--- a/admin/food/foodReport.html
+++ b/admin/food/foodReport.html
@@ -47,6 +47,31 @@
               <h1 id="reportTitle">Food Report</h1>
             </div>
 
+            <div class="form">
+              <form id="foodReportFilterForm">
+                <div class="row">
+                  <div class="form-group">
+                    <label for="start_date">Start Date:</label>
+                    <input type="date" id="start_date" class="form-control" required />
+                  </div>
+
+                  <div class="form-group">
+                    <label for="end_date">End Date:</label>
+                    <input type="date" id="end_date" class="form-control" required />
+                  </div>
+
+                  <div class="form-group form-submit">
+                    <button type="submit" class="btn btn-primary">Load Report</button>
+                    &nbsp;
+                    <button type="button" id="btnToday" class="btn btn-secondary">Today</button>
+                    &nbsp;
+                    <button type="button" id="btnYesterday" class="btn btn-secondary">Yesterday</button>
+                  </div>
+
+                </div>
+              </form>
+            </div>
+
             <div id="alert" class="alert" role="alert" style="display:none;"></div>
 
             <!-- Breakfast Table -->
