--- a/admin/food/issuedPlateReport.html
+++ b/admin/food/issuedPlateReport.html
@@ -45,9 +45,6 @@
         <div class="whitesec">
           <div class="inner-padding">
 
-            <div class="frm-head">
-              <h1 id="reportTitle">Issued Food Plate Report</h1>
-            </div>
 
             <div id="alert" class="alert" role="alert" style="display: none;"></div>
 <div class="frm-head">
@@ -55,6 +52,13 @@
   <div id="alertBox" style="display: none; padding: 10px; margin-top: 10px; border-radius: 5px; font-weight: bold;"></div>
 </div>
 <input type="text" id="tableSearch" class="form-control search-box" placeholder="Search...">
+<button
+  id="bulkIssueBtn"
+  class="btn btn-primary"
+  style="display:none; margin-bottom:10px;"
+>
+  Issue Selected Plates
+</button>
 
             <div class="table-responsive">
               <table id="bookingsTable" class="table table-striped table-bordered">
