gave vikash uncle (officeAdmin) access to new pages of adhyayan

--- a/admin/adhyayan/adhyayanAttendanceReport.html
+++ b/admin/adhyayan/adhyayanAttendanceReport.html
@@ -27,7 +27,7 @@
     </div>
   </div>
 <script>
-    checkRoleAccess(['adhyayanAdmin', 'superAdmin','adhyayanAdminKol', 'adhyayanAdminRaj', 'adhyayanAdminDhu', 'adhyayanAdminReadOnly']);
+    checkRoleAccess(['officeAdmin', 'adhyayanAdmin', 'superAdmin','adhyayanAdminKol', 'adhyayanAdminRaj', 'adhyayanAdminDhu', 'adhyayanAdminReadOnly']);
   </script>
 
 
