--- a/admin/adhyayan/adhyayanAttendanceScan.html
+++ b/admin/adhyayan/adhyayanAttendanceScan.html
@@ -77,7 +77,7 @@
   </div>
 
   <script>
-    checkRoleAccess(['adhyayanAdmin', 'superAdmin','adhyayanAdminKol', 'adhyayanAdminRaj', 'adhyayanAdminDhu', 'adhyayanAdminReadOnly']);
+    checkRoleAccess(['officeAdmin', 'adhyayanAdmin', 'superAdmin','adhyayanAdminKol', 'adhyayanAdminRaj', 'adhyayanAdminDhu', 'adhyayanAdminReadOnly']);
   </script>
   <script src="./adhyayanAttendanceScan.js"></script>
 </body>
