--- a/admin/adhyayan/adhyayanRegistration.html
+++ b/admin/adhyayan/adhyayanRegistration.html
@@ -1,6 +1,6 @@
 <script src="/style/js/roleCheck.js"></script>
 <script>
-  checkRoleAccess(['adhyayanAdmin', 'superAdmin', 'adhyayanAdminRaj']);
+  checkRoleAccess(['officeAdmin', 'adhyayanAdmin', 'superAdmin', 'adhyayanAdminRaj']);
 </script>
 
 <!DOCTYPE html>
