attendance report improvement

--- a/admin/adhyayan/adhyayanAttendanceScan.html
+++ b/admin/adhyayan/adhyayanAttendanceScan.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Adhyayan Attendance Scanner</title>
+  <title id="pageTitle">Adhyayan Attendance Scanner</title>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="../../style/js/plugin.js"></script>
@@ -83,8 +83,7 @@
       <div class="whitesec">
         <div class="inner-padding">
           <div class="frm-head">
-            <h4><b><u>Adhyayan Attendance Scanner</u></b></h4>
-            <p id="scanner-heading"></p>
+            <h4 id="scanner-heading"><b><u></u></b></h4>
           </div>
 
           <div class="form">
