gave option to add attendace record

--- a/admin/adhyayan/adhyayanBookingslist.html
+++ b/admin/adhyayan/adhyayanBookingslist.html
@@ -70,6 +70,8 @@
       <th>Admin Comments</th>
       <th>Booked By</th>
       <th>Action</th>
+      <th>Add Attendance Record</th>
+
     </tr>
   </thead>
   <tbody></tbody>
