added dhule option in adhyayan, utsav checkin report bug resolved

--- a/admin/adhyayan/createAdhyayan.html
+++ b/admin/adhyayan/createAdhyayan.html
@@ -62,6 +62,7 @@
                     <option value="Research Centre">Parli Research Centre</option>
                     <option value="Rajnandgaon">Mokshdham Rajndangaon</option>
                     <option value="Mumbai">Mumbai</option>
+                    <option value="Dhule">Dhule</option>
                     <option value="Kolkata">Kolkata Centre</option>
                   </select>
                 </div>
