--- a/admin/adhyayan/updateAdhyayan.html
+++ b/admin/adhyayan/updateAdhyayan.html
@@ -56,10 +56,12 @@
                 <div class="form-group">
                   <label for="location">Location:</label>
                   <select id="location" name="location" class="form-control" required>
-  <option value="Research Centre">Parli Research Centre</option>
-  <option value="Rajndangaon">Mokshdham Rajndangaon</option>
-  <option value="Kolkata">Kolkata Centre</option>
-</select>
+                    <option value="Research Centre">Parli Research Centre</option>
+                    <option value="Rajnandgaon">Mokshdham Rajndangaon</option>
+                    <option value="Mumbai">Mumbai</option>
+                    <option value="Dhule">Dhule</option>
+                    <option value="Kolkata">Kolkata Centre</option>
+                </select>
                 </div>
 
                 <div class="form-group">
