--- a/admin/utsav/index.html
+++ b/admin/utsav/index.html
@@ -49,13 +49,9 @@
 
             <div class="admin-menu">
               <div class="menu-grid">
-                <a class="menu-btn" href="createUtsav.html">Add New Utsav</a>
-                <a class="menu-btn" href="fetchAllUtsav.html">Edit Existing Utsav</a>
+                <a class="menu-btn" href="createUtsav.html">Add New Utsav and Packages</a>
+                <a class="menu-btn" href="fetchAllUtsav.html">Edit Existing Utsav and Packages</a>
                 <a class="menu-btn" href="utsavCentre.html">Utsav Summary Report</a>
-                <a class="menu-btn" href="utsavStatusUpdate.html">Utsav Status Update</a>
-                <a class="menu-btn" href="createPackage.html">Add New Utsav Package</a>
-                <a class="menu-btn" href="fetchAllPackage.html">Edit Existing Utsav Package</a>
-                <a class="menu-btn" href="uploadRoomNo.html">Upload Room No</a>
               </div>
             </div>
 
