--- a/admin/utsav/createPackage.html
+++ b/admin/utsav/createPackage.html
@@ -50,37 +50,44 @@
               <div id="alert" class="alert" role="alert" style="display: none;"></div>
 
               <form id="utsavPackageForm">
-  <!-- Display Utsav Name (Read-Only) -->
+
+  <!-- Utsav Name -->
   <div class="form-group">
     <label for="utsav_name">Utsav Name:</label>
     <input type="text" id="utsav_name" name="utsav_name" class="form-control" readonly />
   </div>
 
-  <!-- Package Name (Editable) -->
+  <!-- Package Table -->
   <div class="form-group">
-    <label for="packageName">Package Name:</label>
-    <input type="text" id="packageName" name="packageName" class="form-control" required />
-  </div>
+    <label>Packages:</label>
 
-  <div class="form-group">
-    <label for="start_date">Start Date:</label>
-    <input type="date" id="start_date" name="start_date" class="form-control" required />
-  </div>
+    <table class="table" id="packageTable">
+      <thead>
+        <tr>
+          <th>Package Name</th>
+          <th>Start Date</th>
+          <th>End Date</th>
+          <th>Amount</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody id="packageTableBody">
+      </tbody>
+    </table>
 
-  <div class="form-group">
-    <label for="end_date">End Date:</label>
-    <input type="date" id="end_date" name="end_date" class="form-control" required />
-  </div>
-
-  <div class="form-group">
-    <label for="amount">Amount:</label>
-    <input type="number" id="amount" name="amount" class="form-control" required />
+    <button type="button" class="btn btn-secondary" id="addRowBtn">
+      + Add Package
+    </button>
   </div>
 
   <div class="form-group form-submit">
-    <button type="submit" class="btn btn-primary">Create Utsav Package</button>
+    <button type="submit" class="btn btn-primary">
+      Create Packages
+    </button>
   </div>
+
 </form>
+
 </div>
 
           </div>
