--- a/admin/utsav/fetchAllUtsav.html
+++ b/admin/utsav/fetchAllUtsav.html
@@ -1,79 +1,372 @@
 <script src="/style/js/roleCheck.js"></script>
+
 <script>
-  checkRoleAccess(['utsavAdmin', 'superAdmin']); // customize allowed roles per page
+  checkRoleAccess(['utsavAdmin', 'superAdmin']);
 </script>
 
 <!DOCTYPE html>
+
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Upcoming Utsavs</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Upcoming Utsavs</title>
 
-    <!-- Load jQuery first -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <!-- Load jQuery first -->
 
-    <!-- Scripts -->
-    <script src="../../style/js/plugin.js"></script>
-    <script src="../../style/js/bootstrap-datepicker.min.js"></script>
-    <script src="../../style/js/clockpicker.js"></script>
-    <script src="../../style/js/custom.js"></script>
-    <script src="../../style/js/config.js"></script>
-    <script src="../../style/js/formatDate.js"></script>
-    <script src="/sessionstorage.js"></script>
-    <script src="fetchAllUtsav.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-    <!-- Styles -->
-    <link rel="stylesheet" href="../../style/css/styles.css" />
-  </head>
+  <!-- Scripts -->
 
-  <body>
-    <div class="header">
-      <div class="container">
-        <div class="logout">
-          <a href="javascript:void(0);" onclick="history.back()">Back</a>
-          &nbsp; | &nbsp; <a href="javascript:void(0);" onclick="goToHome()">Home</a>
-          &nbsp; | &nbsp; <a href="javascript:void(0);" onclick="logout()">Logout</a>
-        </div>
+  <script src="../../style/js/plugin.js"></script>
+
+  <script src="../../style/js/bootstrap-datepicker.min.js"></script>
+
+  <script src="../../style/js/clockpicker.js"></script>
+
+  <script src="../../style/js/custom.js"></script>
+
+  <script src="../../style/js/config.js"></script>
+
+  <script src="../../style/js/formatDate.js"></script>
+
+  <script src="/sessionstorage.js"></script>
+
+  <script src="fetchAllUtsav.js"></script>
+  
+  <!-- Styles -->
+
+  <link rel="stylesheet" href="../../style/css/styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>  
+
+
+  <style>
+    /* ================= BULK MODAL HARD FIX ================= */
+
+    .edit-package-btn {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 6px;
+  color: #007bff !important;
+  font-size: 14px !important;
+  text-decoration: none;
+}
+
+.edit-package-btn i {
+  display: inline-block !important;
+  font-size: 14px !important;
+  color: #007bff !important;
+  visibility: visible !important;
+  opacity: 1 !important;
+}
+
+    #bulkPackageModal {
+      overflow-y: auto;
+    }
+
+    #bulkPackageModal .modal-box {
+      background: #fff;
+      width: 92%;
+      max-width: 640px;
+      padding: 20px;
+      border-radius: 6px;
+      margin: 5% auto;
+      position: relative;
+    }
+
+    /* 🔥 Prevent table stretch */
+    #bulkPackageTable {
+      width: 100%;
+      table-layout: fixed;
+    }
+
+    /* Column widths */
+    #bulkPackageTable th:nth-child(1),
+    #bulkPackageTable td:nth-child(1) { width: 30%; }
+
+    #bulkPackageTable th:nth-child(2),
+    #bulkPackageTable td:nth-child(2) { width: 20%; }
+
+    #bulkPackageTable th:nth-child(3),
+    #bulkPackageTable td:nth-child(3) { width: 20%; }
+
+    #bulkPackageTable th:nth-child(4),
+    #bulkPackageTable td:nth-child(4) { width: 20%; }
+
+    #bulkPackageTable th:nth-child(5),
+    #bulkPackageTable td:nth-child(5) { width: 10%; }
+
+    /* Inputs containment */
+    #bulkPackageModal input {
+      width: 100%;
+      box-sizing: border-box;
+    }
+
+    #bulkPackageModal th,
+    #bulkPackageModal td {
+      white-space: normal;
+      word-break: break-word;
+    }
+
+    /* Optional nice scroll if many rows */
+    #bulkPackageModal .table-wrapper {
+      max-height: 300px;
+      overflow-y: auto;
+    }
+
+    /* ===== FORCE PEN ICON VISIBILITY ===== */
+
+.edit-utsav-btn {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 6px;
+  color: #007bff !important;
+  font-size: 14px !important;
+  text-decoration: none;
+}
+
+.edit-utsav-btn i {
+  display: inline-block !important;
+  font-size: 14px !important;
+  color: #007bff !important;
+  visibility: visible !important;
+  opacity: 1 !important;
+}
+
+  </style>
+
+</head>
+
+<body>
+  <div class="header">
+    <div class="container">
+      <div class="logout">
+        <a href="javascript:void(0);" onclick="history.back()">Back</a>
+        &nbsp; | &nbsp;
+        <a href="javascript:void(0);" onclick="goToHome()">Home</a>
+        &nbsp; | &nbsp;
+        <a href="javascript:void(0);" onclick="logout()">Logout</a>
       </div>
     </div>
+  </div>
 
-    <div class="middlecontent">
-      <div class="container">
-        <div class="whitesec">
-          <div class="inner-padding">
-            <div class="frm-head">
-              <h1>Upcoming Utsavs</h1>
-            </div>
-
-            <div class="form">
-              <div class="table-responsive">
-                <table id="utsavList" class="table table-striped table-bordered">
-                  <thead>
-                    <tr>
-                      <th><center>Serial No</center></th>
-                      <th><center>Utsav Name</center></th>
-                      <th><center>Start Date</center></th>
-                      <th><center>End Date</center></th>
-                      <th><center>Registration Deadline</center></th>
-                      <th><center>Max Count</center></th>
-                      <th><center>Avaibale Count</center></th>
-                      <th><center>Location</center></th>
-                      <th><center>Status</center></th>
-                      <th><center>Action</center></th>
-                      <th><center>Add Package</center></th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <!-- Rows will be populated dynamically using JavaScript -->
-                  </tbody>
-                </table>
-              </div>
-            </div>
-
+  <div class="middlecontent">
+    <div class="container">
+      <div class="whitesec">
+        <div class="inner-padding">
+          <div class="frm-head">
+            <h1>Upcoming Utsavs</h1>
           </div>
+
+      <div style="margin-bottom:10px; font-size:13px; color:#555;">
+        <i>Tip: Click on the Utsav Name to see or edit its packages.</i>
+      </div>
+
+      <div class="form">
+        <div class="table-responsive">
+          <table id="utsavList" class="table table-striped table-bordered">
+            <thead>
+              <tr>
+                <th><center>Serial No</center></th>
+                <th><center>Utsav Name</center></th>
+                <th><center>Start Date</center></th>
+                <th><center>End Date</center></th>
+                <th><center>Registration Deadline</center></th>
+                <th><center>Max Count</center></th>
+                <th><center>Avaibale Count</center></th>
+                <th><center>Location</center></th>
+                <th><center>Status</center></th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
         </div>
       </div>
+
     </div>
-  </body>
+  </div>
+</div>
+
+  </div>
+
+  <!-- ================= BULK PACKAGE MODAL ================= -->
+
+  <div id="bulkPackageModal" style="
+    display:none;
+    position:fixed;
+    z-index:9999;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
+    background-color:rgba(0,0,0,0.4);
+  ">
+    <div class="modal-box">
+      <div style="display:flex; justify-content:space-between;">
+        <h3>Add Packages</h3>
+        <span id="closeBulkModal" style="cursor:pointer;font-size:20px;">&times;</span>
+      </div>
+
+  <div class="table-wrapper">
+    <table class="table table-bordered" id="bulkPackageTable">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Start</th>
+          <th>End</th>
+          <th>Amount</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+
+  <button id="addRowBtn" class="btn btn-secondary">+ Row</button>
+  <button id="saveBulkPackages" class="btn btn-primary">
+    Save Packages
+  </button>
+</div>
+
+  </div>
+
+  <!-- ================= PACKAGE EDIT MODAL ================= -->
+
+  <div id="packageEditModal" class="modal" style="
+    display:none;
+    position:fixed;
+    z-index:9999;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
+    overflow:auto;
+    background-color:rgba(0,0,0,0.4);
+  ">
+    <div class="modal-content" style="
+      background:#fff;
+      width:90%;
+      max-width:600px;
+      margin:8% auto;
+      padding:20px;
+      border-radius:6px;
+      position:relative;
+    ">
+      <div style="display:flex; justify-content:space-between; align-items:center;">
+        <h3>Edit Package</h3>
+        <span id="closePackageModal" style="cursor:pointer; font-size:20px;">&times;</span>
+      </div>
+
+  <form id="packageEditForm">
+    <input type="hidden" id="edit_package_id" />
+
+    <div class="form-group">
+      <label>Package Name</label>
+      <input type="text" id="edit_package_name" class="form-control" required />
+    </div>
+
+    <div class="form-group">
+      <label>Start Date</label>
+      <input type="date" id="edit_package_start" class="form-control" required />
+    </div>
+
+    <div class="form-group">
+      <label>End Date</label>
+      <input type="date" id="edit_package_end" class="form-control" required />
+    </div>
+
+    <div class="form-group">
+      <label>Amount</label>
+      <input type="number" id="edit_package_amount" class="form-control" required />
+    </div>
+
+    <div class="form-group form-submit">
+      <button type="submit" class="btn btn-primary">
+        Update Package
+      </button>
+    </div>
+  </form>
+</div>
+
+  </div>
+
+  <!-- ================= UTSAV EDIT MODAL ================= -->
+
+<div id="utsavEditModal" style="
+  display:none;
+  position:fixed;
+  z-index:9999;
+  left:0;
+  top:0;
+  width:100%;
+  height:100%;
+  overflow:auto;
+  background-color:rgba(0,0,0,0.4);
+">
+  <div style="
+    background:#fff;
+    width:90%;
+    max-width:650px;
+    margin:6% auto;
+    padding:20px;
+    border-radius:6px;
+    position:relative;
+  ">
+    <div style="display:flex; justify-content:space-between; align-items:center;">
+      <h3>Edit Utsav</h3>
+      <span id="closeUtsavModal" style="cursor:pointer;font-size:20px;">&times;</span>
+    </div>
+
+    <form id="utsavEditForm">
+
+      <input type="hidden" id="edit_utsav_id" />
+
+      <div class="form-group">
+        <label>Name</label>
+        <input type="text" id="edit_utsav_name" class="form-control" required />
+      </div>
+
+      <div class="form-group">
+        <label>Start Date</label>
+        <input type="date" id="edit_utsav_start" class="form-control" required />
+      </div>
+
+      <div class="form-group">
+        <label>End Date</label>
+        <input type="date" id="edit_utsav_end" class="form-control" required />
+      </div>
+
+      <div class="form-group">
+        <label>Total Seats</label>
+        <input type="number" id="edit_utsav_total" class="form-control" required />
+      </div>
+
+      <div class="form-group">
+        <label>Available Seats</label>
+        <input type="number" id="edit_utsav_available" class="form-control" required />
+      </div>
+
+      <div class="form-group">
+        <label>Location</label>
+        <input type="text" id="edit_utsav_location" class="form-control" required />
+      </div>
+
+      <div class="form-group">
+        <label>Registration Deadline</label>
+        <input type="date" id="edit_utsav_deadline" class="form-control" required />
+      </div>
+
+      <div class="form-group form-submit">
+        <button type="submit" class="btn btn-primary">
+          Update Utsav
+        </button>
+      </div>
+
+    </form>
+  </div>
+</div>
+
+</body>
 </html>
