--- a/admin/food/index.html
+++ b/admin/food/index.html
@@ -55,7 +55,7 @@
                 <a class="menu-btn" href="foodReport.html">Food Reports</a>
                 <a class="menu-btn" href="fetchMenu.html">Menu Management</a>
                 <a class="menu-btn" href="issuePlateScan.html">Issue Plate - Scanner</a>
-                
+                <a class="menu-btn" href="mealCount.html">Meal Count</a>
               </div>
             </div>
 
